styles/style.css
* {
    margin: 0;
    padding: 0;
    font-family: "Inter", sans-serif;
}

section {
    padding: 55px 55px;
}

.hr-common {
    color: #FFFFFF;
    opacity: 30%;
}

/* nav css */
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 24px 115px;
    background-color: #FFFFFF;
}

ul {
    display: flex;
    gap: 10px;
    color: #575757;
}

nav ul li {
    list-style: none;
}

ul li a {
    text-decoration: none;
}

.btn {
    background-color: #1D4ED8;
    color: #FFFFFF;
    padding: 12px 40px;
    border: none;
    border-radius: 10px;
    font-size: 24px;
    cursor: pointer;
}

/* header part css */
header {
    background-image: linear-gradient(to right,
            rgba(0, 0, 0, 0.6) 30%,
            rgba(0, 0, 0, 0) 70%), url("../assets/banner.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
    display: flex;
    flex-direction: column;
    text-align: center;
    padding-top: 110px;
}

header .header-text h1 {
    color: #FFFFFF;
    font-size: 80px;
    font-weight: bold;

}

header .header-text h1 span {
    font-style: italic;
}

header .header-text p {
    color: #FFFFFF;
    margin-top: 12px;
}

header .header-btn{
    margin-top: 400px;
    background-color: #1D4ED8;
    color: #FFFFFF;
    padding: 25px 62px;
    border: none;
    border-radius: 10px;
    font-size: 24px;  
}



/* Meet the Speakers css */
.img-speaker {
    display: grid;
    grid-template-columns: repeat(2, 2fr);
    gap: 35px;
    padding: 30px 60px;
}

.img-speaker-container {
    border: #E5E7EB 1px solid;
    border-radius: 12px;
}

.img-speaker-container .img-container {
    width: 100%;
}

.img-container img {
    width: 100%;
    object-fit: cover;
    display: block;
    background-color: #FFFFFF;
    border-radius: 12px 12px 0px 0px;
}

.img-text h5 {
    color: #2563EB;
    padding-top: 22px;
    margin-left: 24px;
}

.img-text h1 {
    padding-top: 8px;
    margin-left: 24px;
    color: #0D1B2A;
}

.img-text p {
    padding-top: 8px;
    margin-left: 24px;
    color: #575757;
    margin-bottom: 27px;
}

.Speakers-text {
    text-align: center;
    margin-bottom: 55px;
}

.Speakers-text h1 {
    font-weight: bold;
    font-size: 56px;
}

/* Secure Your Spot css */
.card-header {
    text-align: center;
}

.card-header h1 {
    font-weight: bold;
    font-size: 48px;
    color: #0D1B2A;
    padding-bottom: 15px;
}

.card-header p {
    color: #575757;
    margin-bottom: 45px;
}

.card {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 24px;
}
.card-box p{
    color: #888888;
    font-size: 13px;
    padding-bottom: 8px;
}

.card-box {
    background-color: #FFFFFF;
    border-radius: 12px;
    border: #E5E7EB 1px solid;
    padding: 30px;
}

.card-body ul {
    display: flex;
    flex-direction: column;
    font-size: 14px;
    padding-top: 20px;
    color: #333333;
}

li::marker {
    color: #2563eb;
    font-size: 14px;
}

.card-heading p {
    color: #888888;
    font-size: 13px;
    padding-bottom: 8px;
}

.card-heading h2 {
    color: #0D1B2A;
    padding-bottom: 5px;
}

.card-btn {
    margin-top: 35px;
    text-align: center;
}

.card-btn button {
    padding: 11px 105px;
    border-radius: 8px;
    font-weight: 600;
    font-size: 14px;
    color: #2563EB;
    border: #2563EB solid 1px;
    background-color: #FFFFFF;
    cursor: pointer;
}

.card-box-2 {
    background-color: #0D1B2A;
    border-radius: 12px;
    border: #E5E7EB 1px solid;
    padding: 30px;
}

.card-heading-2 h2 {
    color: #FFFFFF;
    padding-bottom: 5px;
}

.card-box-2 .pro {
    color: #93C5FD;
    font-size: 13px;
    padding-bottom: 8px;
}

.card-box-2 p {
    color: #888888;
    font-size: 13px;
    padding-bottom: 8px;
}

.card-body-2 ul {
    display: flex;
    flex-direction: column;
    color: #FFFFFF;
    padding-top: 20px;
    font-size: 14px;
    opacity: 80%;
}

.pro-card-btn {
    margin-top: 35px;
    text-align: center;
}

.pro-card-btn button {
    padding: 11px 105px;
    border-radius: 8px;
    font-weight: 600;
    font-size: 14px;
    color: #FFFFFF;
    border: none;
    background-color: #2563EB;
    cursor: pointer;
}

.card-box-3 {
    background-color: #F8F9FB;
    border-radius: 12px;
    border: #E5E7EB 1px solid;
    padding: 30px;
}

.card-box-3 p {
    color: #888888;
    font-size: 13px;
    padding-bottom: 8px;
}

.card-box-3 h2 {
    color: #0D1B2A;
    padding-bottom: 5px;
}

.team-btn {
    margin-top: 35px;
    text-align: center;
}

.team-btn button {
    padding: 11px 105px;
    border-radius: 8px;
    font-weight: 600;
    font-size: 14px;
    color: #0D1B2A;
    border: #0D1B2A 1px solid;
    background-color: #FFFFFF;
    cursor: pointer;
}
/* footer part */
footer {
    background-color: #0D1B2A;
    padding: 24px 115px;
    margin-top: 70px;
}

.footer-1st {
    display: flex;
    justify-content: space-between;
    align-items: center;

}

.footer-icon {
    display: flex;
    justify-content: flex-end;
    gap: 15px;
    align-items: center;
}

.footer-icon a {
    list-style: none;
    text-decoration: none;
    color: #0b7f68;
}

.footer-p p {
    text-align: center;
    padding-top: 12px;
    color: #93C5FD;
}

/* Schedule */
.schedule-section{
    background-color: #a19292;
}
.schedule-container{
    margin-top: 15px;
    display: flex;
    flex-direction: column;
    gap: 25px;
}
.schedule-header{
    text-align: center;
}
.schedule-header h1{
    color: #333333;
    font-size: 60px;
    padding: 10px;
}
.schedule-header p{
    color: rgb(145, 112, 69);
    font-size: 25px;
    padding-bottom: 8px;
}
.schedule-box{
    display: flex;
    flex-direction: row;
    align-items: center;
    text-align: start;
    margin: 0px 120px;
    padding: 55px 150px;
    border: #333333 solid 1px;
    background-color: cadetblue;
    border-radius: 12px;
    box-shadow: black 5px 5px 15px;
}.schedule-box h2{
    color: rgb(116, 40, 12);
    padding: 35px 55px;
}
.schedule-text h1{
    padding-bottom: 8px;
}
.schedule-text p{
    color: #5d3434;
    font-style: italic;
    padding-bottom: 20px;
}
.schedule-text span{
    border: #333333 1px solid;
    background-color: #93C5FD;
    padding: 10px 15px;
    border-radius: 15px;
    box-shadow: #333333 5px 7px 10px;
}
.schedule-img img{
    height: 80px;
    width: 80px;
    margin-right: 25px;
    border: #575757 solid 1px;
    border-radius: 15px;
    object-fit: cover;
}
/* .schedule .schedule-box hr{
    color: black;
} */

